tests/semantic/counter2/counter2.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2017, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

// Check the counter functor increments as expected.
.decl A(a:number)
.output A

A(1).

A($) :- A(1).
A($) :- A(1).
A($) :- A(1).
